--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ RATE_LIMIT_COOLDOWN=60
 DB_DRIVER=sqlite3
 
 # 如果使用 "sqlite3"
-SQLITE_PATH=./data.db
+SQLITE_PATH=./data/data.db
 
 # 如果使用 "mysql" (请确保下面的信息正确)
 MYSQL_HOST=127.0.0.1
