--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,11 @@ MAX_RETRIES=5
 # 当一个 Key 遇到 429 错误时，临时禁用的时长（单位：秒）。
 RATE_LIMIT_COOLDOWN=60
 
+# --- 健康检查 ---
+# 后台 Key 健康检查的并发数。根据你的网络环境和机器性能调整。
+# 7000个key建议设置为 50-100
+HEALTH_CHECK_CONCURRENCY=10
+
 # --- 数据库配置 (二选一) ---
 # 数据库驱动，可选值为: "sqlite3" 或 "mysql" (更改后需要重启程序)
 DB_DRIVER=sqlite3
