--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,38 @@ RATE_LIMIT_COOLDOWN=60
 # 7000个key建议设置为 50-100
 HEALTH_CHECK_CONCURRENCY=10
 
+# --- 日志配置 ---
+# 日志级别: DEBUG, INFO, WARN, ERROR
+LOG_LEVEL=INFO
+
+# 是否将日志写入文件 (true/false)
+LOG_TO_FILE=false
+
+# 日志文件路径
+LOG_FILE=./logs/gemini_polling.log
+
+# 单个日志文件最大大小 (MB)
+MAX_LOG_SIZE_MB=100
+
+# 保留的日志文件数量
+MAX_LOG_BACKUPS=5
+
+# 日志文件保留天数
+MAX_LOG_AGE_DAYS=30
+
+# --- 智能 Key 管理配置 ---
+# 最小健康分数阈值，低于此分数的key将不被使用
+MIN_HEALTH_SCORE=30
+
+# 最大429次数阈值，超过此次数的key将被禁用
+MAX_429_COUNT=20
+
+# 成功使用key后的健康分数奖励
+RECOVERY_BONUS=5
+
+# 429惩罚系数，用于计算冷却时间
+PENALTY_FACTOR=1.5
+
 # --- 数据库配置 (二选一) ---
 # 数据库驱动，可选值为: "sqlite3" 或 "mysql" (更改后需要重启程序)
 DB_DRIVER=sqlite3
